<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="keyhandler_settings_title">Hardware Switch Settings</string>
    <string name="keyhandler_settings_summary">Configure camera and mic switches</string>
    <string name="mic_power_on_enabled_title">Use Mic ON as wake/sleep</string>
    <string name="mic_power_on_enabled_summary">Enables the upper section of the switch to be a power button</string>
    <string name="mic_power_off_enabled_title">Use Mic OFF as wake/sleep</string>
    <string name="mic_power_off_enabled_summary">Enables the lower section of the switch to be a power button</string>
    <string name="cam_power_on_enabled_title">Use Cam ON as wake/sleep</string>
    <string name="cam_power_on_enabled_summary">Enables the Red/Blocked section of the switch to be a power button</string>
    <string name="cam_power_off_enabled_title">Use Cam OFF as wake/sleep</string>
    <string name="cam_power_off_enabled_summary">Enables the unblocked camera section of the switch to be a power button</string>

</resources>