<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Microphone Mute Switch">
        <SwitchPreference
            android:key="MIC_ON_enable"
            android:defaultValue="false"
            android:title="@string/mic_power_on_enabled_title"
            android:summary="@string/mic_power_on_enabled_summary" />

        <SwitchPreference
            android:key="MIC_OFF_enable"
            android:defaultValue="false"
            android:title="@string/mic_power_off_enabled_title"
            android:summary="@string/mic_power_off_enabled_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Camera Block Switch">
        <SwitchPreference
            android:key="CAM_ON_enable"
            android:defaultValue="false"
            android:title="@string/cam_power_on_enabled_title"
            android:summary="@string/cam_power_on_enabled_summary" />

        <SwitchPreference
            android:key="CAM_OFF_enable"
            android:defaultValue="false"
            android:title="@string/cam_power_off_enabled_title"
            android:summary="@string/cam_power_off_enabled_summary" />
    </PreferenceCategory>
</PreferenceScreen>